# tryalma-test

./: .env.example  .gitignore  HOWTO.md  Quickstart.md  README.md  pyproject.toml
.claude/commands/kiro-flow/: abort.md  list.md  resume.md  start.md  status.md
.kiro/settings/templates/: flow-state.json
.kiro/specs/document-upload-ui/: design.md  requirements.md  spec.json  tasks.md
.kiro/specs/g28-form-parser/: design.md  spec.json  tasks.md
.kiro/specs/llm-passport-crosscheck/: design.md  requirements.md  research.md  spec.json
.kiro/specs/passport-data-extraction-cli/: design.md  research.md  tasks.md
.kiro/specs/web-form-population/: requirements.md  spec.json  tasks.md
.kiro/steering/: python-cli.md  python-fast-api.md  python-tdd.md  python-uv.md  simple-webapp-flask.md
datasets/: README.md
datasets/samples/: ALB_id_card_0b99bb24.tif  AUT_id_card_0a1aa05f.tif  AZE_passport_0a276455.tif  BRA_passport_f255f2df.tif
datasets/scripts/: augment_images.py  download_datasets.py  organize_dataset.py
docs/: project-overview.md
docs/specifications/document-upload-ui/: design.md
docs/specifications/form-population/: design.md  requirements.md  spec.json
docs/specifications/g28-form-parser/: requirements.md
docs/specifications/passport-data-extraction-cli/: requirements.md  spec.json  tasks.md
docs/specifications/web-form-population/: design.md  requirements.md  tasks.md
src/tryalma/: __init__.py  __main__.py  cli.py  core.py  exceptions.py  main.py
src/tryalma/api/: __init__.py
src/tryalma/crosscheck/: __init__.py  cli.py  confidence_scorer.py  config.py  discrepancy_reporter.py  exceptions.py  field_cross_validator.py  models.py  qwen2vl_provider.py  service.py
src/tryalma/form_populator/: __init__.py  browser_controller.py  exceptions.py  field_handlers.py  field_mapping_config.py  models.py  reporter.py  service.py
src/tryalma/g28/: __init__.py  cli.py  document_loader.py  exceptions.py  field_extractor.py  models.py  output_formatter.py  parser_service.py  vision_extractor.py
src/tryalma/passport/: __init__.py  cli.py  exceptions.py  extractor.py  formatter.py  models.py  service.py  utils.py  validator.py
src/tryalma/webapp/: __init__.py  app.py  config.py  exceptions.py  field_mapper.py  routes.py  upload_service.py  validators.py
tests/: __init__.py  conftest.py
tests/contract/: test_hf_inference_contract.py  test_mrz_library_contract.py  test_passporteye_contract.py
tests/integration/: __init__.py  conftest.py  test_cli.py  test_cli_parse_g28.py  test_error_scenarios.py  test_parser_service.py
tests/integration/crosscheck/: __init__.py  test_cli_crosscheck.py  test_crosscheck_service_integration.py  test_package_integration.py
tests/integration/passport/: __init__.py  conftest.py  test_cli.py
tests/unit/: test_core.py  test_health.py
tests/unit/crosscheck/: __init__.py  test_confidence_scorer.py  test_config.py  test_crosscheck_service.py  test_discrepancy_reporter.py  test_exceptions.py  test_field_cross_validator.py  test_models.py  test_qwen2vl_provider.py
tests/unit/form_populator/: __init__.py  test_browser_controller.py  test_checkbox_handler.py  test_date_field_handler.py  test_exceptions.py  test_field_mapping_config.py  test_form_population_service.py  test_population_reporter.py  test_radio_handler.py  test_select_field_handler.py  test_text_field_handler.py
(+36 files in other folders)
